semester2/object_oriented_programming/tps/.svn/pristine/a3/a3a22683fbf97ec35897b0b1b45a9b18328305f3.svn-base
allumettes/StrategieNaive.java:6: error: cannot find symbol
		return Generateur.nb_Aleatoire(jeu);
		       ^
  symbol:   variable Generateur
  location: class StrategieNaive
1 error
